Fix title sizing on home page, fix jump link positioning

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -15,7 +15,7 @@ body.home {
     }
 
     h1 {
-      @extend .pe-title, .pe-title--large;
+      @extend .pe-page-title;
       color: $pe-color-white;
       margin-bottom: 24px;
     }
