--- a/_sass/blocks/_section.scss
+++ b/_sass/blocks/_section.scss
@@ -1,4 +1,12 @@
 .section {
   border-top: 2px solid $pe-color-alto;
   padding-top: 60px;
+
+  h2:before {
+    display: block;
+    content: " ";
+    margin-top: -60px;
+    height: 60px;
+    visibility: hidden;
+  }
 }
